<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/signInTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LogIn"
                android:textAlignment="center"
                android:textColor="#283618"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Email"
                android:textColor="#354F52"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailSignInTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Password"
                android:textColor="#354F52"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordSignInTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/createAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contextClickable="true"
                android:gravity="end"
                android:padding="10sp"
                android:text="@string/CreateAccount"
                android:textColor="#606C38"
                android:textStyle="bold"
                android:onClick="navigateToCreateParentAccount" />

            <Button
                android:id="@+id/signInButton"
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="#52796F"
                android:onClick="onClickSendSignIn"
                android:text="@string/Send" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Botón "Sign in as administrator" -->
    <Button
        android:id="@+id/adminSignInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#52796F"
        android:elevation="8dp"
        android:onClick="navigateToParentAccountLogin"
        android:text="@string/LoginAsAdmin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
